<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">@string/APP_NAME</string>
    <string name="app_debug_flag">ZYC</string>

    <!--title-->
    <string name="act_complete_info">个人信息</string>
    <string name="act_doctor_auth">医生认证</string>
    <string name="act_health_detail">健康详情</string>
    <string name="act_cooperate_doc">合作医生</string>
    <string name="act_apply_doctor">医生申请</string>
    <string name="act_doctor_info">医生信息</string>
    <string name="act_apply_patient">患者申请</string>
    <string name="act_patient_info">患者信息</string>
    <string name="act_my_patient">我的患者</string>
    <string name="act_auth_doctor">认证</string>
    <string name="act_user_info">个人详情</string>
    <string name="act_editUser_info">编辑信息</string>
    <string name="act_editRemark">设置备注</string>
    <string name="act_registration_detail">订单详情</string>
    <string name="act_registration_list">开单记录</string>
    <string name="act_file_list">报告列表</string>
    <string name="act_setting">设置</string>
    <string name="act_hospital_info">医院信息</string>
    <string name="act_transfer_patient_history">转诊记录</string>
    <string name="act_transfer_patient">转诊信息</string>
    <string name="act_base_info">我的基础信息</string>
    <string name="act_case_record">我的健康档案</string>
    <string name="act_editHealth_info">基础信息</string>
    <string name="act_add_address">地址</string>
    <string name="act_about_our">关于我们</string>
    <string name="act_capture">扫描</string>
    <string name="act_cooperate_hospital">合作医院</string>
    <string name="act_transfer_from">转给我的患者</string>
    <string name="act_transfer_to">我转出的患者</string>
    <string name="act_select_doc_type">科室</string>

    <!--public-->
    <string name="txt_list_none_data_hint">暂无更多数据</string>
    <string name="txt_list_push_hint">上拉加载更多</string>
    <string name="txt_exit_hint">确定退出?</string>
    <string name="txt_delete_hint">确定删除吗?</string>
    <string name="txt_download_hint">开始下载</string>
    <string name="txt_add_order_notify_patient_hint">确定发送给患者？</string>
    <string name="txt_add_order_hint">已发送给患者</string>
    <string name="txt_capture_img">相册</string>
    <string name="txt_camera_img">拍照</string>
    <string name="txt_complete">完成</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_add_friend">添加好友</string>
    <string name="txt_add_friend_apply">好友申请</string>
    <string name="txt_add_friend_agree">通过验证</string>
    <string name="txt_name_format">%s(%s)</string>

    <!--menu-->
    <string name="txt_menu_doc">合作医院医生</string>
    <string name="txt_menu_remark">设置备注</string>
    <string name="txt_menu_delete">删除</string>
    <string name="txt_menu_chat">对话</string>
    <string name="txt_menu_transfer">转诊</string>
    <string name="txt_menu_service">服务包</string>
    <string name="txt_menu_case">病历</string>

    <!--患者信息-->
    <string name="txt_health_card_hint">还没有健康档案哦~</string>
    <string name="txt_delete_case_hint">删除当前病例</string>


    <!--启动页 引导页-->
    <string name="txt_splash_btn">开始使用</string>
    <string name="txt_splash">会珍</string>
    <string name="txt_splash_type">-医生端-</string>
    <string name="txt_splash_time_hint">跳过(%ds)</string>

    <!--登录界面-->
    <string name="txt_title">登录</string>
    <string name="txt_complete_cancel">跳过</string>
    <string name="txt_get_verify_code_again">重新发送</string>
    <string name="txt_login_hint">请输入您的手机号码</string>
    <string name="toast_upload_card_hint">请输入正确的身份证号码</string>
    <string name="toast_txt_phone_error">您输入的手机号码有误，请重新输入</string>
    <string name="toast_txt_verify_hint">请输入验证码</string>
    <string name="toast_txt_verifycode_success">验证码获取成功</string>
    <string name="toast_txt_read_protol">请先阅读并勾选使用协议</string>
    <string name="txt_camera_login_ensure_hint">远程会诊医生身份确认</string>
    <string name="txt_camera_login_error_hint">这里是%s%s远程会诊系统，您无权使用。</string>

    <!--主页-->
    <string name="main_tab_msg">消息</string>
    <string name="main_tab_patients">首页</string>
    <string name="main_tab_cooperate">合作</string>
    <string name="main_tab_my">我的</string>
    <string name="fragment_main_service">服务包</string>
    <string name="fragment_main_telemedicine">远程会诊</string>
    <string name="fragment_main_train">培训</string>
    <string name="fragment_main_doctor_group">医生集团</string>
    <string name="fragment_main_hospital">合作医院</string>
    <string name="fragment_main_integral">积分</string>


    <!--医生认证-->
    <string name="txt_doc_auth_next">立即认证</string>
    <string name="txt_doc_auth_again">重新认证</string>
    <string name="txt_doc_auth_again_apply">重新提交认证信息</string>
    <string name="txt_doc_auth_verifying">等待后台认证</string>
    <string name="txt_doc_auth_verify_failed">认证失败</string>
    <string name="txt_doc_auth_improve_identity">请完善您的身份信息</string>
    <string name="txt_doc_auth_improve_qualification">请完善您的资质信息</string>
    <string name="txt_doc_auth_name">尊敬的&#160;%s&#160;医生</string>
    <string name="txt_doc_auth_hint">您还未通过平台医生认证，认证流程需要您提供身份证照片及相关行医资格证件照片。</string>
    <string name="txt_doc_auth_hint1">您的身份信息我们正在加紧认证中，一般会花费一个工作日，请耐心等待。</string>
    <string name="txt_doc_auth_hint2">您的身份信息未能通过平台认证，请您仔细核对您的提交信息，尝试再次提交。</string>

    <!--信息界面-->
    <!--ImageAlbumFragment-->
    <string name="toast_upload_job_info_hint">个人职业信息不能为空</string>
    <string name="txt_user_info_num">%s个</string>
    <string name="txt_upload_img_num">正在上传第%d张图片</string>

    <!--相机-->
    <string name="txt_camera_hint">将二维码放入框内，即可自动识别</string>
    <string name="txt_camera_error">二维码有误</string>
    <string name="txt_camera">扫一扫</string>
    <string name="txt_camera_qr">二维码</string>

    <!--聊天界面-->
    <string name="txt_registration_type_hint">选择%s医院</string>
    <string name="txt_registration_project_hint">%s项目：</string>
    <string name="txt_registration_price_hint">%s价格：</string>
    <string name="txt_registration_content_hint">%s内容：</string>

    <!--转诊业务-->
    <string name="txt_transfer_patient_to_doc">已发送给&#160;%s&#160;医生，请等待回复</string>
    <string name="txt_transfer_patient_to_issure_doc">确定转诊给&#160;%s&#160;医生吗</string>
    <string name="txt_transfer_patient_to_isrecv_doc">确定接受&#160;%s&#160;医生的转诊吗</string>
    <string name="txt_transfer_patient_to_isvisit">确定&#160;%s&#160;已就诊</string>
    <string name="txt_transfer_patient_to_input_diagnosisinfo">请输入诊断内容</string>
    <string name="txt_transfer_patient_to">转诊给</string>
    <string name="txt_transfer_patient_from">转诊来自</string>
    <string name="txt_transfer_patient_to_recved">接收转诊</string>
    <string name="txt_transfer_patient_to_cancel">取消转诊</string>
    <string name="txt_transfer_patient_to_refuse">拒绝转诊</string>
    <string name="txt_transfer_patient_to_comfirm">待接受</string>
    <string name="txt_transfer_patient_to_wait_visit">待就诊</string>
    <string name="txt_transfer_patient_to_refuse_visit">已拒绝</string>
    <string name="txt_transfer_patient_to_cancel_visit">已取消</string>
    <string name="txt_transfer_patient_to_complete_visit">已就诊</string>
    <string name="txt_transfer_patient_to_select_doc">请选择合作医生</string>
    <string name="txt_transfer_patient_to_select_hospital_title">接诊医院</string>
    <string name="txt_transfer_patient_to_select_hospital">请选择接诊医院</string>
    <string name="txt_transfer_patient_reverse_time_title">检查时间</string>

    <!--Toast-->
    <string name="toast_limit_emoji">不支持输入Emoji表情</string>
    <string name="toast_add_order_error">请输入描述信息</string>
    <string name="toast_load_image_error">图片加载失败</string>
    <string name="toast_save_image_error">保存失败</string>
    <string name="toast_login_ease_error">登录聊天服务器失败</string>
    <string name="toast_login_ease_success">登录聊天服务器成功</string>
    <string name="toast_download_start">开始下载</string>
    <string name="toast_add_health_detail">带星号为必填项</string>
    <string name="toast_content_null_hint">内容不能为空</string>
    <string name="toast_version_update_hint">当前已是最新版本</string>

    <!--dialog-->
    <string name="dialog_public_title">温馨提示</string>
    <string name="dialog_txt_confirm">确定</string>
    <string name="dialog_txt_exit_hint">编辑内容还未保存，确定退出?</string>
    <string name="dialog_txt_delete_hint">删除后，将清空该聊天的消息记录?</string>

    <!--版本更新-->
    <string name="txt_version_ignore">忽略</string>
    <string name="txt_version_exit">退出</string>
    <string name="txt_version_update">马上更新</string>
    <string name="txt_version_install">立即安装</string>


    <!--permission-->
    <string name="toast_public_current_no_network">当前无网络连接</string>
    <string name="dialog_no_camera_permission_tip">无法打开摄像头，请检查是否已经打开摄像头权限</string>
    <string name="dialog_no_storage_permission_tip">无法访问存储空间，请检查是否已经打开存储权限</string>
    <string name="dialog_no_audio_permission_tip">无法启用录音，请检查是否已经打开录音权限</string>
    <string name="dialog_no_location_permission_tip">无法获取位置信息，请检查是否已经打开位置信息权限</string>
    <string name="dialog_no_audio_camera_permission_tip">无法启用相机和录音，请检查是否已经打开相机和录音权限</string>
    <string name="dialog_no_read_phone_state_tip">无法获取手机信息，请检查是否已经打开电话权限</string>
    <string name="dialog_no_camera_tip">无法打开摄像头</string>
    <string name="dialog_no_storage_tip">无法访问存储空间</string>
    <string name="dialog_no_audio_tip">无法启用录音</string>
    <string name="dialog_no_permission_tip">，请检查是否打开相关权限</string>
    <string name="dialog_no_record_tip">无法录像，请检查是否打开相机和录音权限</string>
    <string name="dialog_discard_before_vedio">确认将丢弃之前已拍摄的视频</string>

    <!--expand TextView-->
    <string name="to_expand_hint">展开&#62;&#62;</string>
    <string name="to_shrink_hint">&#60;&#60;收起</string>

    <item name="tag_key_data" type="id" />
    <item name="tag_key_position" type="id" />
</resources>
