<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"></ImageView>

    <LinearLayout
        android:id="@+id/act_splash_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_marginTop="120dp"
            android:src="@mipmap/ic_launcher"
            android:layout_height="120dp" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/txt_splash"
            android:textColor="@color/color_white"
            android:textSize="27sp"
            android:layout_marginTop="56dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/txt_splash_type"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/act_splash_btn"
            android:layout_width="200dp"
            android:layout_marginTop="130dp"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/txt_splash_btn"
            android:background="@drawable/btn_main_color_selector"
            android:layout_height="46dp" />
    </LinearLayout>

</RelativeLayout>