<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        android:src="@mipmap/img_splash"></ImageView>

    <TextView
        android:id="@+id/act_splash_time_hint"
        android:layout_width="70dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/app_white_color"
        android:gravity="center"
        android:textSize="12sp"
        android:background="@drawable/corner_half_translucent_bg"
        android:layout_height="30dp" />

    <LinearLayout
        android:id="@+id/act_splash_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_marginTop="120dp"
            android:visibility="visible"
            android:src="@mipmap/ic_launcher"
            android:layout_height="120dp" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/txt_splash"
            android:textColor="@color/app_white_color"
            android:textSize="30sp"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/txt_splash_type"
            android:textColor="@color/app_white_color"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/act_splash_btn"
        android:layout_width="300dp"
        android:layout_marginTop="98dp"
        android:textColor="@color/app_white_color"
        android:textSize="14sp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:text="@string/txt_splash_btn"
        android:background="@drawable/btn_main_color_selector_20"
        android:layout_height="46dp" />

</RelativeLayout>