<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <FrameLayout
        android:id="@+id/act_main_tab_frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="49dp"
        android:background="@color/app_alpha_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@color/app_white_color"
            android:orientation="horizontal">

            <custom.frame.widgets.ripples.RippleLinearLayout
                android:id="@+id/act_main_tab1"
                style="@style/RippleBtnMaxCircleStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="21dp"
                    android:src="@drawable/main_tab_chat_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/main_tab_msg"
                    android:textColor="@color/tab_txt_color_selector"
                    android:textSize="9sp" />
            </custom.frame.widgets.ripples.RippleLinearLayout>

            <custom.frame.widgets.ripples.RippleLinearLayout
                android:id="@+id/act_main_tab2"
                style="@style/RippleBtnMaxCircleStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="21dp"
                    android:src="@drawable/main_tab_brand_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/main_tab_patients"
                    android:textColor="@color/tab_txt_color_selector"
                    android:textSize="9sp" />
            </custom.frame.widgets.ripples.RippleLinearLayout>

            <custom.frame.widgets.ripples.RippleLinearLayout
                android:id="@+id/act_main_tab3"
                style="@style/RippleBtnMaxCircleStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="21dp"
                    android:src="@drawable/main_tab_unit_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/main_tab_cooperate"
                    android:textColor="@color/tab_txt_color_selector"
                    android:textSize="9sp" />
            </custom.frame.widgets.ripples.RippleLinearLayout>

            <custom.frame.widgets.ripples.RippleLinearLayout
                android:id="@+id/act_main_tab4"
                style="@style/RippleBtnMaxCircleStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="21dp"
                    android:src="@drawable/main_tab_user_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/main_tab_my"
                    android:textColor="@color/tab_txt_color_selector"
                    android:textSize="9sp" />
            </custom.frame.widgets.ripples.RippleLinearLayout>

        </LinearLayout>

        <View style="@style/LineHorizontalStyle_Main" />

    </RelativeLayout>

</RelativeLayout>